--- a/src/styles/editorOverlay.css
+++ b/src/styles/editorOverlay.css
@@ -1,13 +1,19 @@
 .connector-container {
   & > .connector > .up-connector {
-    border-width: 0 0 0 1px;
     @apply w-3 h-full;
+    border-width: 0 0 0 1px;
     border-color: black;
+    height: calc(50% + 10px);
+    position: absolute;
+    top: -10px;
   }
   & > .connector > .down-connector {
     @apply w-3 h-full;
     border-width: 1px 0 0 1px;
     border-color: black;
+    height: calc(50% + 10px);
+    position: absolute;
+    bottom: -10px;
   }
 }
 
