--- a/src/styles/editorOverlay.css
+++ b/src/styles/editorOverlay.css
@@ -20,6 +20,7 @@
 .connector-container:last-of-type {
   & > .connector > .up-connector {
     border-width: 0 0 1px 1px;
+    border-radius: 0 0 0 3px;
   }
   & > .connector > .down-connector {
     border: 0;
@@ -29,5 +30,8 @@
 .connector-container:first-of-type {
   & > .connector > .up-connector {
     border: 0;
+  }
+  & > .connector > .down-connector {
+    border-radius: 3px 0 0 0;
   }
 }
